# samplepythonproject

./: README.md  pyproject.toml
tests/: testexample.py
