[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_kehindeadewusi"
version = "0.1.0"
authors = [
  { name="Kehinde Adewusi", email="kehinde.adewusi@gmail.com" },
]
description = "A long overdue test"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kehindeadewusi/samplepythonproject"
"Bug Tracker" = "https://github.com/kehindeadewusi/samplepythonproject/issues"
